--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -14,7 +14,18 @@
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
-    "paths": {}
+    "paths": {
+      "@nx-react/api/util-interfaces": [
+        "libs/api/util-interfaces/src/index.ts"
+      ],
+      "@nx-react/store/feature-game-detail": [
+        "libs/store/feature-game-detail/src/index.ts"
+      ],
+      "@nx-react/store/ui-shared": ["libs/store/ui-shared/src/index.ts"],
+      "@nx-react/store/util-formatters": [
+        "libs/store/util-formatters/src/index.ts"
+      ]
+    }
   },
   "exclude": ["node_modules", "tmp"]
 }
