--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   },
   "private": true,
   "dependencies": {
-    "@emotion/react": "11.9.3",
-    "@emotion/styled": "11.9.3",
+    "@emotion/react": "11.10.0",
+    "@emotion/styled": "11.10.0",
     "@mui/material": "^5.9.2",
     "core-js": "^3.6.5",
     "express": "^4.18.1",
@@ -23,18 +23,18 @@
   "devDependencies": {
     "@babel/core": "7.12.13",
     "@babel/preset-typescript": "7.12.13",
-    "@emotion/babel-plugin": "11.9.2",
-    "@nrwl/cli": "14.4.3",
-    "@nrwl/cypress": "14.4.3",
-    "@nrwl/eslint-plugin-nx": "14.4.3",
-    "@nrwl/express": "^14.5.1",
-    "@nrwl/jest": "14.4.3",
-    "@nrwl/linter": "14.4.3",
-    "@nrwl/node": "14.5.1",
-    "@nrwl/react": "14.4.3",
-    "@nrwl/storybook": "^14.5.4",
-    "@nrwl/web": "14.4.3",
-    "@nrwl/workspace": "14.4.3",
+    "@emotion/babel-plugin": "11.10.0",
+    "@nrwl/cli": "14.5.4",
+    "@nrwl/cypress": "14.5.4",
+    "@nrwl/eslint-plugin-nx": "14.5.4",
+    "@nrwl/express": "14.5.4",
+    "@nrwl/jest": "14.5.4",
+    "@nrwl/linter": "14.5.4",
+    "@nrwl/node": "14.5.4",
+    "@nrwl/react": "14.5.4",
+    "@nrwl/storybook": "14.5.4",
+    "@nrwl/web": "14.5.4",
+    "@nrwl/workspace": "14.5.4",
     "@storybook/addon-essentials": "~6.5.9",
     "@storybook/builder-webpack5": "~6.5.9",
     "@storybook/core-server": "~6.5.9",
@@ -44,7 +44,7 @@
     "@testing-library/react": "13.3.0",
     "@types/express": "4.17.13",
     "@types/jest": "27.4.1",
-    "@types/node": "16.11.7",
+    "@types/node": "18.6.3",
     "@types/react": "18.0.14",
     "@types/react-dom": "18.0.5",
     "@types/react-router-dom": "5.3.3",
@@ -57,11 +57,11 @@
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-jsx-a11y": "6.6.0",
+    "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-react": "7.30.1",
     "eslint-plugin-react-hooks": "4.6.0",
     "jest": "27.5.1",
-    "nx": "14.4.3",
+    "nx": "14.5.4",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.2.0",
     "ts-jest": "27.1.4",
@@ -70,3 +70,4 @@
     "url-loader": "^3.0.0"
   }
 }
+
