--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@emotion/react": "11.10.0",
     "@emotion/styled": "11.10.0",
     "@mui/material": "^5.9.2",
+    "body-parser": "^1.20.0",
     "core-js": "^3.6.5",
+    "cors": "^2.8.5",
     "express": "^4.18.1",
+    "morgan": "^1.10.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.3.0",
@@ -70,4 +73,3 @@
     "url-loader": "^3.0.0"
   }
 }
-
